# apple-health-export-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  fastmcp.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: adr.md  glossary.md
src/apple_health_export_mcp/: __init__.py  cli.py  db.py  ingest.py  prompts.py  queries.py  server.py  tools.py
tests/: test_ingest.py  test_queries.py
